subnets_private.tf
#################
# Private Subnets
#################
resource "aws_subnet" "private" { # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/subnet
  for_each = var.private_subnets

  vpc_id = aws_vpc.vpc.id

  assign_ipv6_address_on_creation = each.value.assign_ipv6_address_on_creation
  availability_zone               = each.value.availability_zone
  cidr_block                      = each.value.cidr_block
  # customer_owned_ipv4_pool        = each.value.customer_owned_ipv4_pool
  ipv6_cidr_block     = each.value.ipv6_cidr_block
  ipv6_native         = each.value.ipv6_native
  ipv4_ipam_pool_id   = each.value.ipv4_ipam_pool_id
  ipv4_netmask_length = each.value.ipv4_netmask_length
  ipv6_ipam_pool_id   = each.value.ipv6_ipam_pool_id
  ipv6_netmask_length = each.value.ipv6_netmask_length
  # map_customer_owned_ip_on_launch = each.value.map_customer_owned_ip_on_launch
  outpost_arn = each.value.outpost_arn

  enable_dns64                                   = var.private_subnets_enable_dns64
  enable_resource_name_dns_aaaa_record_on_launch = var.private_subnets_enable_resource_name_dns_aaaa_record_on_launch
  enable_resource_name_dns_a_record_on_launch    = var.private_subnets_enable_resource_name_dns_a_record_on_launch
  map_public_ip_on_launch                        = false
  private_dns_hostname_type_on_launch            = var.private_subnets_private_dns_hostname_type_on_launch

  tags = merge(
    var.additional_tags,
    var.private_subnets_additional_tags,
    {
      Name = format("%s-%s", var.name_prefix, each.key)
    }
  )
}

##########################
# Private subnets flow log
##########################
resource "aws_flow_log" "private_subnet_flow_log" { # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/flow_log
  for_each = { for k, v in var.private_subnets : k => v if v.enable_flow_log }

  deliver_cross_account_role = var.flow_log_deliver_cross_account_role
  iam_role_arn               = var.flow_log_iam_role_arn
  log_destination_type       = var.flow_log_log_destination_type
  log_destination            = var.flow_log_log_destination
  log_format                 = var.flow_log_log_format
  max_aggregation_interval   = var.flow_log_max_aggregation_interval
  subnet_id                  = aws_subnet.private[each.key].id
  traffic_type               = var.flow_log_traffic_type

  destination_options {
    file_format                = var.flow_log_destination_options.file_format
    hive_compatible_partitions = var.flow_log_destination_options.hive_compatible_partitions
    per_hour_partition         = var.flow_log_destination_options.per_hour_partition
  }

  tags = merge(
    {
      Name = format("%s-private-subnet-%s-flow-log", var.name_prefix, each.key)
    },
    var.additional_tags,
    var.flow_log_additional_tags,
  )
}

##############
# Route tables
##############
resource "aws_route_table" "private" { # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table
  for_each = aws_subnet.private

  vpc_id = aws_vpc.vpc.id
  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-private-rt-%s", var.name_prefix, each.key)
    },
  )
}

# Route to access internet
resource "aws_route" "private_internet_route" { # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route
  for_each = aws_route_table.private

  route_table_id         = each.value.id
  destination_cidr_block = "0.0.0.0/0"

  # When NAT GW is zonal, zipmap to create map between public and private ids
  nat_gateway_id = var.nat_gateway_availability_mode == "regional" ? aws_nat_gateway.regional[0].id : aws_nat_gateway.zonal[local.private_subnet_to_nat_routes[each.key]].id
}

# Association of Route Table to Subnets
resource "aws_route_table_association" "private" { # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table_association
  for_each = aws_subnet.private

  subnet_id      = each.value.id
  route_table_id = aws_route_table.private[each.key].id
}
